<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="horizontal" >

    <RelativeLayout
        android:id="@+id/controles_pinza"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true" >

        <Button
            android:id="@+id/abre_pinza_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/abre_pinza" />

        <Button
            android:id="@+id/baja_pinza_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/abre_pinza_btn"
            android:text="@string/bajar_pinza" />

        <Button
            android:id="@+id/subir_pinza_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/abre_pinza_btn"
            android:layout_toRightOf="@id/baja_pinza_btn"
            android:text="@string/subir_pinza" />

        <Button
            android:id="@+id/cerrar_pinza_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/subir_pinza_btn"
            android:layout_centerHorizontal="true"
            android:text="@string/cerrar_pinza" />
    </RelativeLayout>

    <Button
        android:id="@+id/stop_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/stop" />

    <TextView
        android:id="@+id/estadoX"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/stop_btn"
        android:layout_centerHorizontal="true"
        android:text="@string/estado_del_giroscopio" />
    <TextView
        android:id="@+id/estadoY"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/estadoX"
        android:layout_centerHorizontal="true"
        android:text="@string/estado_del_giroscopio" />
       <TextView
        android:id="@+id/estadoZ"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/estadoY"
        android:layout_centerHorizontal="true"
        android:text="@string/estado_del_giroscopio" />
        
        

    <RelativeLayout
        android:id="@+id/controles_movimiento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true" >

        <Button
            android:id="@+id/adelante_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/adelante_" />

        <Button
            android:id="@+id/atras_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/adelante_btn"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/atras_" />
    </RelativeLayout>

</RelativeLayout>